--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="background-image"><!--used for background image--></div>
+    <div class="background-image-hero"><!--used for background image--></div>
+    <div class="background-image-secondary"><!--used for background image--></div>
     <header class="header">
 
         <nav class="nav-bar">
