--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
             <h2 class="title">
                 Locație
             </h2>
-            <div class="maps">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1389.196576631499!2d25.79086645842804!3d45.863443294777014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b4a49671c7b2eb%3A0x10084a042392d459!2sSC%20Electroconstructia%20ELCO%20SA!5e0!3m2!1sro!2sro!4v1650561976670!5m2!1sro!2sro" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1389.196576631499!2d25.79086645842804!3d45.863443294777014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b4a49671c7b2eb%3A0x10084a042392d459!2sSC%20Electroconstructia%20ELCO%20SA!5e0!3m2!1sro!2sro!4v1650561976670!5m2!1sro!2sro" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
             
     
