--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="bg-hero"> <!--element for hero bg image-->
+    <div class="bg-hero container"> <!--element for hero bg image-->
         <header class="header bg-text">
             <img class="svg" src="./images/logo.svg" alt="ELCO logo">
 
@@ -48,7 +48,7 @@
         </main>
     </div>
 
-    <div class="bg-secondary"> <!--element for secondary bg image-->
+    <div class="bg-secondary container"> <!--element for secondary bg image-->
         <section class="certificates">
             <h2 class="title bg-text">
                 Certificate
