--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
             <section>
                 <h1 class="main-title text-bg">
                     Soluția completă în instalații electrice cu peste 25 de ani de experiență
+                    <span>ELCO SA</span>
                 </h1>
 
-                <h2 class="side-text">
+                <!-- <h2 class="side-text">
                     ELCO SA
-                </h2>
+                </h2> -->
 
                 <h3 class="content text-bg">
                     Proiectăm, executăm și întreținem instalații electrice începand cu anul 1993
