--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="hero-bg hero-container"> <!--element for hero bg image-->
+    <div class="hero-container hero-bg"> <!--element for hero bg image-->
         <header class="header text-bg">
             <img class="svg" src="./images/logo.svg" alt="ELCO logo">
 
@@ -39,7 +39,7 @@
                 </h2> -->
 
                 <h3 class="content text-bg">
-                    Proiectăm, executăm și întreținem instalații electrice începand cu anul 1993
+                    Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
                 </h3>
 
                 <h3 class="content text-bg">
@@ -49,7 +49,7 @@
         </main>
     </div>
 
-    <div class="secondary-bg secondary-container"> <!--element for secondary bg image-->
+    <div class="secondary-container secondary-bg"> <!--element for secondary bg image-->
         <section class="certificates">
             <h2 class="title text-bg">
                 Certificate
