--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             </h2>
     
             <div class="certificates-container">
-                <img src="./images/certificat_1.jpg" alt="" class="certif-img">
-                <img src="./images/certificat_2.jpg" alt="" class="certif-img">
-                <img src="./images/certificat_3.jpg" alt="" class="certif-img">
+                <a href="./images/certificat_1.jpg"><img src="./images/certificat_1.jpg" class="certif-img" alt="certificate 1"></a>
+                <a href="./images/certificat_2.jpg"><img src="./images/certificat_2.jpg" class="certif-img" alt="certificate 2"></a>
+                <a href="./images/certificat_3.jpg"><img src="./images/certificat_3.jpg" class="certif-img" alt="certificate 3"></a>
             </div>
         </section>
     
