--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
 
             <span class="copyright">
-                Copyright &copy; ELCO
+                Copyright &copy; ELCO SA
             </span>
         </footer>
     </div>
