--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             <nav class="nav-bar">
                 <ul class="nav-links">
-                    <li><a href="#">Activitate</a></li>
+                    <li><a href="activitate.html">Activitate</a></li>
                     <li><a href="#">Portofoliu</a></li>
                     <li><a href="#">Certificate</a></li>
                     <li><a href="#">Cariere</a></li>
