--- a/index.html
+++ b/index.html
@@ -27,16 +27,12 @@
             </nav>
         </header>
 
-        <main class="hero-section">
+        <main class="main-section">
             <section>
                 <h1 class="main-title text-bg">
                     Soluția completă în instalații electrice cu peste 25 de ani de experiență
                     <span>ELCO SA</span>
                 </h1>
-
-                <!-- <h2 class="side-text">
-                    ELCO SA
-                </h2> -->
 
                 <h3 class="content text-bg">
                     Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
