--- a/activitate.html
+++ b/activitate.html
@@ -88,16 +88,15 @@
 			</ul>
 		</section>
 
-		<section id="pro">
+		<section id="ins">
 			<h2 class="title text-bg">
-				Proiectare și execuție
+				Instalații de curenți slabi
 			</h2>
 			<ul class="list text-bg">
-				<li>Instalații de iluminat și distribuție electrică</li>
-				<li>Instalații de paratrăsnet și împământare</li>
-				<li>Tablouri electrice de distribuție și comandă</li>
-				<li>Instalații electrice de siguranță automatizată cu Generator sau UPS</li>
-				<li>Instalații electrice fotovoltaice și eoliene</li>
+				<li>Sisteme de securitate anti efracție</li>
+				<li>Rețele de Voce Date &#40;incl. rețele optice&#41;</li>
+				<li>Sisteme de securitate la incendiu</li>
+				<li>Sisteme de supraveghere și control acces</li>
 			</ul>
 		</section>
 
