--- a/activitate.html
+++ b/activitate.html
@@ -40,22 +40,14 @@
                 </h3>
             </section>
 
-			<div class="buttons">
-				<a href="#pro">
-					<button class="btn">Proiectare și execuție</button>
-				</a>
-
-				<a href="#mas">
-					<button class="btn">Măsurători și verificări periodice</button>
-				</a>
-
-				<a href="#ins">
-					<button class="btn">Instalații de curenți slabi</button>
+			<div class="button">
+				<a href="#servicii">
+					<button class="btn">Servicii</button>
 				</a>
 			</div>
         </main>
 
-		<section class="act-section" id="pro">
+		<section class="act-section" id="servicii">
 			<h2 class="title text-bg">
 				Proiectare și execuție
 			</h2>
