--- a/activitate.html
+++ b/activitate.html
@@ -8,122 +8,123 @@
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-	<div class="container activitate-bg" id="container">
-        <header class="header text-bg">
-            <a href="index.html"><img class="svg" src="./images/logo.svg" alt="ELCO logo"></a>
-
-            <nav class="nav-bar">
-                <ul class="nav-links">
-					<li><a href="index.html">Acasă</a></li>
-                    <li><a href="activitate.html">Activitate</a></li>
-                    <li><a href="#">Portofoliu</a></li>
-                    <li><a href="#">Certificate</a></li>
-                    <li><a href="#">Cariere</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-
-                <img class="svg hide-desktop" src="./images/menu.svg" alt="menu">
-
-                <img class="svg hide-desktop" src="./images/close.svg" alt="close">
-            </nav>
-        </header>
-
-        <main class="main-section">
-            <section>
-                <h2 class="main-title text-bg">
-                    Proiectare, avizare și executare branșamente electrice, casnice și industriale
-                    <span>ELCO SA</span>
-                </h2>
-
-                <h3 class="content text-bg">
-                    Suntem autorizați de către ANRE pentru proiectare instalații electrice de orice putere până la tensiunea de 20kV
-                </h3>
-            </section>
-
-			<div class="button">
-				<a href="#servicii">
-					<button class="btn">Servicii</button>
-				</a>
-			</div>
-        </main>
-
-		<section class="act-section" id="servicii">
-			<h2 class="title text-bg">
-				Proiectare și execuție
-			</h2>
-			<ul class="list content text-bg">
-				<li>Instalații de iluminat și distribuție electrică</li>
-				<li>Instalații de paratrăsnet și împământare</li>
-				<li>Tablouri electrice de distribuție și comandă</li>
-				<li>Instalații electrice de siguranță automatizată cu Generator sau UPS</li>
-				<li>Instalații electrice fotovoltaice și eoliene</li>
-			</ul>
-		</section>
-
-		<section class="act-section" id="mas">
-			<h2 class="title text-bg">
-				Măsurători și verificări periodice
-			</h2>
-			<ul class="list content text-bg">
-				<li>Verificare prize de împământare și rețea de egalizare potențiale</li>
-				<li>Verificare instalație paratrăznet</li>
-				<li>Verificare izolație cabluri &#40;test până 5000V&#41;</li>
-				<li>Monitorizare completă a parametrilor rețelei electrice &#40;24-48 ore&#41;</li>
-				<li>Verificare tablouri electrice &#40;incl. cameră termoviziune&#41;</li>
-				<li>Măsurători de intensitate a luminii</li>
-			</ul>
-		</section>
-
-		<section class="act-section" id="ins">
-			<h2 class="title text-bg">
-				Instalații de curenți slabi
-			</h2>
-			<ul class="list content text-bg">
-				<li>Sisteme de securitate anti efracție</li>
-				<li>Rețele de Voce Date &#40;incl. rețele optice&#41;</li>
-				<li>Sisteme de securitate la incendiu</li>
-				<li>Sisteme de supraveghere și control acces</li>
-			</ul>
-		</section>
-
-		<a href="#container">
-			<button>
-				<img src="./images/arrow.svg" alt="arrow up">
-			</button>
-		</a>
-
-		<footer class="text-bg">
-            <div class="contact">
-                <div class="contact-details">
-                    <img class="icon" src="./images/email.svg" alt="email">
-
-                    <span> elco@elco-cv.ro </span>
-                </div>
-
-                <div class="contact-details">
-                    <img class="icon" src="./images/phone.svg" alt="phone">
-
-                    <span> 0267 351 009 </span>
-                </div>
-
-                <div class="contact-details">
-                    <img class="icon" src="./images/fax.svg" alt="fax">
-
-                    <span> 0267 351 004 </span>
-                </div>
-
-                <div class="contact-details">
-                    <img class="icon" src="./images/address.svg" alt="address">
-
-                    <span> str. N. Bălcescu nr. 17, Sf. Gheorghe, CP 520024 </span>
-                </div>
-            </div>
-
-            <span class="copyright">
-                Copyright &copy; ELCO SA
-            </span>
-        </footer>
-
+	<div class="activitate-bg" id="container">
+		<div class="container">
+			<header class="header text-bg">
+				<a href="index.html"><img class="svg" src="./images/logo.svg" alt="ELCO logo"></a>
+	
+				<nav class="nav-bar">
+					<ul class="nav-links">
+						<li><a href="index.html">Acasă</a></li>
+						<li><a href="activitate.html">Activitate</a></li>
+						<li><a href="#">Portofoliu</a></li>
+						<li><a href="#">Certificate</a></li>
+						<li><a href="#">Cariere</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+	
+					<img class="svg hide-desktop" src="./images/menu.svg" alt="menu">
+	
+					<img class="svg hide-desktop" src="./images/close.svg" alt="close">
+				</nav>
+			</header>
+	
+			<main class="main-section">
+				<section>
+					<h2 class="main-title text-bg">
+						Proiectare, avizare și executare branșamente electrice, casnice și industriale
+						<span>ELCO SA</span>
+					</h2>
+	
+					<h3 class="content text-bg">
+						Suntem autorizați de către ANRE pentru proiectare instalații electrice de orice putere până la tensiunea de 20kV
+					</h3>
+				</section>
+	
+				<div class="button">
+					<a href="#servicii">
+						<button class="btn">Servicii</button>
+					</a>
+				</div>
+			</main>
+	
+			<section class="act-section" id="servicii">
+				<h2 class="title text-bg">
+					Proiectare și execuție
+				</h2>
+				<ul class="list content text-bg">
+					<li>Instalații de iluminat și distribuție electrică</li>
+					<li>Instalații de paratrăsnet și împământare</li>
+					<li>Tablouri electrice de distribuție și comandă</li>
+					<li>Instalații electrice de siguranță automatizată cu Generator sau UPS</li>
+					<li>Instalații electrice fotovoltaice și eoliene</li>
+				</ul>
+			</section>
+	
+			<section class="act-section" id="mas">
+				<h2 class="title text-bg">
+					Măsurători și verificări periodice
+				</h2>
+				<ul class="list content text-bg">
+					<li>Verificare prize de împământare și rețea de egalizare potențiale</li>
+					<li>Verificare instalație paratrăznet</li>
+					<li>Verificare izolație cabluri &#40;test până 5000V&#41;</li>
+					<li>Monitorizare completă a parametrilor rețelei electrice &#40;24-48 ore&#41;</li>
+					<li>Verificare tablouri electrice &#40;incl. cameră termoviziune&#41;</li>
+					<li>Măsurători de intensitate a luminii</li>
+				</ul>
+			</section>
+	
+			<section class="act-section" id="ins">
+				<h2 class="title text-bg">
+					Instalații de curenți slabi
+				</h2>
+				<ul class="list content text-bg">
+					<li>Sisteme de securitate anti efracție</li>
+					<li>Rețele de Voce Date &#40;incl. rețele optice&#41;</li>
+					<li>Sisteme de securitate la incendiu</li>
+					<li>Sisteme de supraveghere și control acces</li>
+				</ul>
+			</section>
+	
+			<a href="#container">
+				<button>
+					<img src="./images/arrow.svg" alt="arrow up">
+				</button>
+			</a>
+	
+			<footer class="text-bg">
+				<div class="contact">
+					<div class="contact-details">
+						<img class="icon" src="./images/email.svg" alt="email">
+	
+						<span> elco@elco-cv.ro </span>
+					</div>
+	
+					<div class="contact-details">
+						<img class="icon" src="./images/phone.svg" alt="phone">
+	
+						<span> 0267 351 009 </span>
+					</div>
+	
+					<div class="contact-details">
+						<img class="icon" src="./images/fax.svg" alt="fax">
+	
+						<span> 0267 351 004 </span>
+					</div>
+	
+					<div class="contact-details">
+						<img class="icon" src="./images/address.svg" alt="address">
+	
+						<span> str. N. Bălcescu nr. 17, Sf. Gheorghe, CP 520024 </span>
+					</div>
+				</div>
+	
+				<span class="copyright">
+					Copyright &copy; ELCO SA
+				</span>
+			</footer>
+		</div>
     </div>
 	
 </body>
