--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     Certificate
                 </h2>
 
-                <div class="smaller-container">
+                <div class="smaller-container flex">
                     <a href="./images/certificat_1.jpg"><img src="./images/certificat_1.jpg" class="certif-img" alt="certificate 1"></a>
                     <a href="./images/certificat_2.jpg"><img src="./images/certificat_2.jpg" class="certif-img" alt="certificate 2"></a>
                     <a href="./images/certificat_3.jpg"><img src="./images/certificat_3.jpg" class="certif-img" alt="certificate 3"></a>
@@ -69,8 +69,10 @@
                 <h2 class="title text-bg">
                     Locație
                 </h2>
-                
-                <iframe class="smaller-container"> src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1389.196576631499!2d25.79086645842804!3d45.863443294777014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b4a49671c7b2eb%3A0x10084a042392d459!2sSC%20Electroconstructia%20ELCO%20SA!5e0!3m2!1sro!2sro!4v1650561976670!5m2!1sro!2sro" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                <div class="smaller-container">
+                    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1389.196576631499!2d25.79086645842804!3d45.863443294777014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b4a49671c7b2eb%3A0x10084a042392d459!2sSC%20Electroconstructia%20ELCO%20SA!5e0!3m2!1sro!2sro!4v1650561976670!5m2!1sro!2sro" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </section>
 
             <footer class="text-bg">
