--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <div class="secondary-bg"> <!--element for secondary bg image-->
         <div class="container">
-            <section>
+            <section class="section-separator">
                 <h2 class="title text-bg">
                     Certificate
                 </h2>
@@ -67,7 +67,7 @@
                 </div>
             </section>
 
-            <section>
+            <section class="section-separator">
                 <h2 class="title text-bg">
                     Locație
                 </h2>
