--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <div class="container">
             <header class="header-fixed">
                 <div class="flex-sb text-bg header"> <!--added this as separate element from header because position fixed from header was conflicting with position absolute from text-bg::after-->
-                    <a href="index.html"><img class="svg" src="./images/logo.svg" alt="ELCO logo"></a>
+                    <a href="index.html">
+                        <img class="svg" src="./images/logo.svg" alt="ELCO logo">
+                    </a>
 
                     <nav class="flex">
                         <ul class="flex nav-links">
@@ -50,6 +52,8 @@
                 </section>
             </main>
         </div>
+
+        <img class="svg arrow-down" src="./images/arrow.svg" alt="arrow down">
     </div>
 
     <div class="secondary-bg"> <!--element for secondary bg image-->
@@ -114,7 +118,7 @@
 
     <div class="back-to-top"> <!--button back to top-->
         <a href="#top">
-            <img class="svg arrow" src="./images/arrow.svg" alt="arrow up">
+            <img class="svg arrow-up" src="./images/arrow.svg" alt="arrow up">
         </a>
     </div>
 
