--- a/activitate.html
+++ b/activitate.html
@@ -18,6 +18,7 @@
 
                     <nav class="flex">
                         <ul class="flex nav-links">
+							<li class="nav-link"><a href="index.html">Acasă</a></li>
                             <li class="nav-link"><a href="activitate.html">Activitate</a></li>
                             <li class="nav-link"><a href="#">Portofoliu</a></li>
                             <li class="nav-link"><a href="#">Certificate</a></li>
@@ -44,7 +45,7 @@
 					</h3>
 				</section>
 	
-				<div class="button">
+				<div class="button smaller-container">
 					<a href="#servicii">
 						<button class="btn">Servicii</button>
 					</a>
