--- a/activitate.html
+++ b/activitate.html
@@ -33,19 +33,21 @@
                 </div>
             </header>
 	
-			<main class="main-section">
-				<section>
-					<h2 class="main-title text-bg">
-						Proiectare, avizare și executare branșamente electrice, casnice și industriale
-						<span>ELCO SA</span>
-					</h2>
-	
+			<main class="main-section flex-col flex-sa">
+				<section class="height-inherit">
+					<div class="main-title">
+						<h2 class="motto text-bg">
+							Proiectare, avizare și executare branșamente electrice, casnice și industriale
+							<span class="side-text">ELCO SA</span>
+						</h2>
+					</div>
+
 					<h3 class="content text-bg">
 						Suntem autorizați de către ANRE pentru proiectare instalații electrice de orice putere până la tensiunea de 20kV
 					</h3>
 				</section>
 	
-				<div class="button smaller-container">
+				<div class="button smaller-container flex-cen">
 					<a href="#servicii">
 						<button class="btn">Servicii</button>
 					</a>
