--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="bg bg--hero" id="top"> <!--element for hero bg image-->
         <header class="frame frame--header">
-                <a> href="index.html">
+                <a href="index.html">
                     <img class="svg" src="./images/logo.svg" alt="ELCO logo">
                 </a>
 
@@ -31,7 +31,7 @@
                 </nav>
         </header>
 
-        <main class="bg bg--secondary">
+        <main>
             <section>
                 <div class="frame">
                     <h1 class="frame__text frame__text--big">
@@ -60,9 +60,17 @@
             </h2>
 
             <div class="container container--bg">
-                <a href="./images/certificat_1.jpg"><img src="./images/certificat_1.jpg" class="certif-img" alt="certificate 1"></a>
-                <a href="./images/certificat_2.jpg"><img src="./images/certificat_2.jpg" class="certif-img" alt="certificate 2"></a>
-                <a href="./images/certificat_3.jpg"><img src="./images/certificat_3.jpg" class="certif-img" alt="certificate 3"></a>
+                <a href="./images/certificat_1.jpg">
+                    <img class="container__item" src="./images/certificat_1.jpg" class="certif-img" alt="certificate 1">
+                </a>
+
+                <a href="./images/certificat_2.jpg">
+                    <img class="container__item" src="./images/certificat_2.jpg" class="certif-img" alt="certificate 2">
+                </a>
+
+                <a href="./images/certificat_3.jpg">
+                    <img class="container__item" src="./images/certificat_3.jpg" class="certif-img" alt="certificate 3">
+                </a>
             </div>
         </section>
 
@@ -72,7 +80,7 @@
             </h2>
 
             <div class="container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1389.196576631499!2d25.79086645842804!3d45.863443294777014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b4a49671c7b2eb%3A0x10084a042392d459!2sSC%20Electroconstructia%20ELCO%20SA!5e0!3m2!1sro!2sro!4v1650561976670!5m2!1sro!2sro" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="container__item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1389.196576631499!2d25.79086645842804!3d45.863443294777014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b4a49671c7b2eb%3A0x10084a042392d459!2sSC%20Electroconstructia%20ELCO%20SA!5e0!3m2!1sro!2sro!4v1650561976670!5m2!1sro!2sro" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
 
