--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
                 <nav class="nav">
                     <ul class="nav__links">
-                        <li class="nav__link nav__link--active"><a href="index.html">Acasă</a></li>
-                        <li class="nav__link"><a href="activitate.html">Activitate</a></li>
-                        <li class="nav__link"><a href="#">Portofoliu</a></li>
-                        <li class="nav__link"><a href="#">Certificate</a></li>
-                        <li class="nav__link"><a href="#">Cariere</a></li>
-                        <li class="nav__link"><a href="#">Contact</a></li>
+                        <li class="nav__link nav__link--hide"><a href="index.html">Acasă</a></li>
+                        <li class="nav__link nav__link--hide"><a href="activitate.html">Activitate</a></li>
+                        <li class="nav__link nav__link--hide"><a href="#">Portofoliu</a></li>
+                        <li class="nav__link nav__link--hide"><a href="#">Certificate</a></li>
+                        <li class="nav__link nav__link--hide"><a href="#">Cariere</a></li>
+                        <li class="nav__link nav__link--hide"><a href="#">Contact</a></li>
                     </ul>
 
                     <img class="svg svg--hide" src="./images/menu.svg" alt="menu">
@@ -55,29 +55,35 @@
 
     <div class="bg bg--secondary"> <!--element for secondary bg image-->
         <section>
-            <h2 class="frame frame__title">
-                Certificate
-            </h2>
+            <div class="frame">
+                <h2 class="frame__title">
+                    Certificate
+                </h2>
+            </div>
 
             <div class="container container--bg">
-                <a href="./images/certificat_1.jpg">
-                    <img class="container__item" src="./images/certificat_1.jpg" class="certif-img" alt="certificate 1">
-                </a>
-
-                <a href="./images/certificat_2.jpg">
-                    <img class="container__item" src="./images/certificat_2.jpg" class="certif-img" alt="certificate 2">
-                </a>
-
-                <a href="./images/certificat_3.jpg">
-                    <img class="container__item" src="./images/certificat_3.jpg" class="certif-img" alt="certificate 3">
-                </a>
+                <div class="flex">
+                    <a href="./images/certificat_1.jpg">
+                        <img class="container__item" src="./images/certificat_1.jpg" class="certif-img" alt="certificate 1">
+                    </a>
+    
+                    <a href="./images/certificat_2.jpg">
+                        <img class="container__item" src="./images/certificat_2.jpg" class="certif-img" alt="certificate 2">
+                    </a>
+    
+                    <a href="./images/certificat_3.jpg">
+                        <img class="container__item" src="./images/certificat_3.jpg" class="certif-img" alt="certificate 3">
+                    </a>
+                </div>
             </div>
         </section>
 
         <section>
-            <h2 class="frame frame__title">
-                Locație
-            </h2>
+            <div class="frame">
+                <h2 class="frame__title">
+                    Locație
+                </h2>
+            </div>
 
             <div class="container">
                 <iframe class="container__item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1389.196576631499!2d25.79086645842804!3d45.863443294777014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b4a49671c7b2eb%3A0x10084a042392d459!2sSC%20Electroconstructia%20ELCO%20SA!5e0!3m2!1sro!2sro!4v1650561976670!5m2!1sro!2sro" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
