--- a/index.html
+++ b/index.html
@@ -20,58 +20,62 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="bg bg--hero" id="top">
-        <header class="frame frame--positioning frame--header">
-            <div class="flex flex--sb">
-                <a href="index.html">
-                    <img class="svg" src="./images/logo.svg" alt="ELCO logo">
-                </a>
-                <nav class="nav">
-                    <div class="flex">
-                        <ul class="nav__links">
-                            <li class="nav__link nav__link--hide"><a href="index.html">Acasă</a></li>
-                            <li class="nav__link nav__link--hide"><a href="activitate.html">Activitate</a></li>
-                            <li class="nav__link nav__link--hide"><a href="#">Portofoliu</a></li>
-                            <li class="nav__link nav__link--hide"><a href="#">Certificate</a></li>
-                            <li class="nav__link nav__link--hide"><a href="#">Cariere</a></li>
-                            <li class="nav__link nav__link--hide"><a href="#">Contact</a></li>
-                        </ul>
-                        <img class="svg" src="./images/menu.svg" alt="menu">
-                        <img class="svg svg--hide" src="./images/close.svg" alt="close">
-                    </div>
+    <div class="bg-img bg-img--hero" id="top">
+        <div class="pos-help">
+            <header class="frame pos-help__frame frame--header">
+                <nav class="frame__inner pos-help__flex pos-help__flex--sb">
+                    <a href="index.html">
+                        <img class="svg" src="./images/logo.svg" alt="ELCO logo">
+                    </a>
+                    <ul class="nav">
+                        <li class="nav__link nav__link--hide"><a href="index.html">Acasă</a></li>
+                        <li class="nav__link nav__link--hide"><a href="activitate.html">Activitate</a></li>
+                        <li class="nav__link nav__link--hide"><a href="#">Portofoliu</a></li>
+                        <li class="nav__link nav__link--hide"><a href="#">Certificate</a></li>
+                        <li class="nav__link nav__link--hide"><a href="#">Cariere</a></li>
+                        <li class="nav__link nav__link--hide"><a href="#">Contact</a></li>
+                    </ul>
+                    <img class="svg" src="./images/menu.svg" alt="menu">
+                    <img class="svg svg--hide" src="./images/close.svg" alt="close">
                 </nav>
-            </div>
-        </header>
-        <main>
-            <section>
-                <div class="frame frame--positioning">
-                    <h1 class="frame__text frame__text--big">
-                        Soluția completă în instalații electrice cu peste 25 de ani de experiență
-                    </h1>
-                    <span class="">ELCO SA</span>
-                </div>
-                <div class="frame frame--positioning">                        
-                    <h3 class="frame__text">
-                        Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
-                    </h3>
-                </div>
-                <div class="frame frame--positioning">                        
-                    <h3 class="frame__text">
-                        Sistemele noastre electrice sunt optimizate pentru a fi ecologice și fiabile, asigurând eficiența energetică, securitatea și confortul clienților noștri
-                    </h3>
-                </div>
-            </section>
-        </main>
-        <img class="svg svg--arrow-down" src="./images/arrow.svg" alt="arrow down">
+            </header>
+            <main>
+                <section>
+                    <div class="frame pos-help__frame">
+                        <div class="frame__inner">
+                            <h1 class="frame__text frame__text--big">
+                                Soluția completă în instalații electrice cu peste 25 de ani de experiență
+                            </h1>
+                            <span class="">ELCO SA</span>
+                        </div>
+                    </div>
+                    <div class="frame pos-help__frame">
+                        <div class="frame__inner">
+                            <h3 class="frame__text">
+                                Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
+                            </h3>
+                        </div>
+                    </div>
+                    <div class="frame pos-help__frame">
+                        <div class="frame__inner">
+                            <h3 class="frame__text">
+                                Sistemele noastre electrice sunt optimizate pentru a fi ecologice și fiabile, asigurând eficiența energetică, securitatea și confortul clienților noștri
+                            </h3>
+                        </div>
+                    </div>
+                </section>
+            </main>
+            <img class="svg pos-help__arrow-down svg--arrow-down" src="./images/arrow.svg" alt="arrow down">
+        </div>
     </div>
-    <div class="bg bg--secondary">
+    <div class="bg-img bg-img--secondary">
         <section class="certificates">
-            <div class="frame frame--positioning">
+            <div class="frame pos-help__frame">
                 <h2 class="frame__title">
                     Certificate
                 </h2>
             </div>
-            <div class="flex flex--positioning">
+            <div class="fle">
                 <a href="./images/certificat_1.jpg">
                     <img class="certificates__item" src="./images/certificat_1.jpg" class="certif-img" alt="certificate 1">
                 </a>
@@ -83,15 +87,15 @@
                 </a>
             </div>
         </section>
-        <section class="map map--positioning">
-            <div class="frame frame--positioning">
+        <section class="mpositioning">
+            <div class="frame pos-help__frame">
                 <h2 class="frame__title">
                     Locație
                 </h2>
             </div>
             <iframe class="map__item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1389.196576631499!2d25.79086645842804!3d45.863443294777014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b4a49671c7b2eb%3A0x10084a042392d459!2sSC%20Electroconstructia%20ELCO%20SA!5e0!3m2!1sro!2sro!4v1650561976670!5m2!1sro!2sro" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
-        <footer class="frame frame--positioning frame--footer">
+        <footer class="frame pos-help__frame frame--footer">
             <div class="flex flex--wrap">
                 <div class="contact">
                     <img class="contact__icon" src="./images/email.svg" alt="email">
