--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             <main>
                 <section>
                     <div class="frame pos-help__frame">
-                        <div class="frame__inner">
+                        <div class="frame__inner frame__inner--big">
+                            <span class="frame__side-text">ELCO SA</span>
                             <h1 class="frame__text frame__text--big">
                                 Soluția completă în instalații electrice cu peste 25 de ani de experiență
                             </h1>
-                            <span class="">ELCO SA</span>
                         </div>
                     </div>
                     <div class="frame pos-help__frame">
