--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     bg--hero                    modifier for when the background image does not take the full height of the body, this is specific for hero image
     bg--secondary               modifier for when the background image does not take the full height of the body, this is specific for secondary image
     frame                       block for adding a white strip background
-    frame__inner                element to add right padding to frame on large screens and to add right and left padding to frame on small screens
-    pos-help                    block which has elements that mix with inner blocks to help position them
     frame--header               rounds only the bottom-left corner
 
 -------------------------------------------------------------------------->
@@ -24,49 +22,41 @@
 </head>
 <body>
     <div class="bg-img bg-img--hero" id="top">
-        <div class="pos-help">
-            <header class="frame pos-help__frame frame--header">
-                <div class="frame__header">
-                    <nav class="pos-help__flex pos-help__flex--sb">
-                        <a href="index.html">
-                            <img class="svg" src="./images/logo.svg" alt="ELCO logo">
-                        </a>
-                        <ul class="nav">
-                            <li class="nav__link nav__link--hide"><a href="index.html">Acasă</a></li>
-                            <li class="nav__link nav__link--hide"><a href="activitate.html">Activitate</a></li>
-                            <li class="nav__link nav__link--hide"><a href="#">Portofoliu</a></li>
-                            <li class="nav__link nav__link--hide"><a href="#">Certificate</a></li>
-                            <li class="nav__link nav__link--hide"><a href="#">Cariere</a></li>
-                            <li class="nav__link nav__link--hide"><a href="#">Contact</a></li>
-                        </ul>
-                        <img class="svg" src="./images/menu.svg" alt="menu">
-                        <img class="svg svg--hide" src="./images/close.svg" alt="close">
-                    </nav>
-                </div>
+        <div class="position">
+            <header class="frame frame--header">
+                <nav class="nav">
+                    <a href="index.html">
+                        <img class="nav_svg" src="./images/logo.svg" alt="ELCO logo">
+                    </a>
+                    <ul class="nav__links">
+                        <li class="nav__link nav__link--hide"><a href="index.html">Acasă</a></li>
+                        <li class="nav__link nav__link--hide"><a href="activitate.html">Activitate</a></li>
+                        <li class="nav__link nav__link--hide"><a href="#">Portofoliu</a></li>
+                        <li class="nav__link nav__link--hide"><a href="#">Certificate</a></li>
+                        <li class="nav__link nav__link--hide"><a href="#">Cariere</a></li>
+                        <li class="nav__link nav__link--hide"><a href="#">Contact</a></li>
+                    </ul>
+                    <img class="svg nav_svg" src="./images/menu.svg" alt="menu">
+                    <img class="svg nav_svg svg--hide" src="./images/close.svg" alt="close">
+                </nav>
             </header>
             <main>
                 <section>
-                    <div class="frame pos-help__frame">
-                        <div class="frame__inner frame__inner--big">
-                            <span class="frame__side-text">ELCO SA</span>
-                            <h1 class="frame__text frame__text--big">
-                                Soluția completă în instalații electrice cu peste 25 de ani de experiență
-                            </h1>
-                        </div>
+                    <div class="frame">
+                        <span class="frame__side-text">ELCO SA</span>
+                        <h1 class="frame__text frame__text--big">
+                            Soluția completă în instalații electrice cu peste 25 de ani de experiență
+                        </h1>
                     </div>
-                    <div class="frame pos-help__frame">
-                        <div class="frame__inner">
-                            <h3 class="frame__text">
-                                Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
-                            </h3>
-                        </div>
+                    <div class="frame">
+                        <h3 class="frame__text">
+                            Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
+                        </h3>
                     </div>
-                    <div class="frame pos-help__frame">
-                        <div class="frame__inner">
-                            <h3 class="frame__text">
-                                Sistemele noastre electrice sunt optimizate pentru a fi ecologice și fiabile, asigurând eficiența energetică, securitatea și confortul clienților noștri
-                            </h3>
-                        </div>
+                    <div class="frame">
+                        <h3 class="frame__text">
+                            Sistemele noastre electrice sunt optimizate pentru a fi ecologice și fiabile, asigurând eficiența energetică, securitatea și confortul clienților noștri
+                        </h3>
                     </div>
                 </section>
             </main>
