--- a/index.html
+++ b/index.html
@@ -23,44 +23,46 @@
 <body>
     <div class="bg-img bg-img--hero" id="top">
         <div class="position">
-            <header class="frame frame--header">
-                <nav class="nav">
-                    <a href="index.html">
-                        <img class="nav_svg" src="./images/logo.svg" alt="ELCO logo">
-                    </a>
-                    <ul class="nav__links">
-                        <li class="nav__link nav__link--hide"><a href="index.html">Acasă</a></li>
-                        <li class="nav__link nav__link--hide"><a href="activitate.html">Activitate</a></li>
-                        <li class="nav__link nav__link--hide"><a href="#">Portofoliu</a></li>
-                        <li class="nav__link nav__link--hide"><a href="#">Certificate</a></li>
-                        <li class="nav__link nav__link--hide"><a href="#">Cariere</a></li>
-                        <li class="nav__link nav__link--hide"><a href="#">Contact</a></li>
-                    </ul>
-                    <img class="svg nav_svg" src="./images/menu.svg" alt="menu">
-                    <img class="svg nav_svg svg--hide" src="./images/close.svg" alt="close">
-                </nav>
-            </header>
+            <div class="header">
+                <header class="frame frame--header">
+                    <nav class="nav">
+                        <a href="index.html">
+                            <img class="svg nav__svg" src="./images/logo.svg" alt="ELCO logo">
+                        </a>
+                        <ul class="nav__links">
+                            <li class="nav__link nav__link--hide"><a href="index.html">Acasă</a></li>
+                            <li class="nav__link nav__link--hide"><a href="activitate.html">Activitate</a></li>
+                            <li class="nav__link nav__link--hide"><a href="#">Portofoliu</a></li>
+                            <li class="nav__link nav__link--hide"><a href="#">Certificate</a></li>
+                            <li class="nav__link nav__link--hide"><a href="#">Cariere</a></li>
+                            <li class="nav__link nav__link--hide"><a href="#">Contact</a></li>
+                        </ul>
+                        <img class="svg nav__svg" src="./images/menu.svg" alt="menu">
+                        <img class="svg nav__svg svg--hide" src="./images/close.svg" alt="close">
+                    </nav>
+                </header>
+            </div>
             <main>
                 <section>
-                    <div class="frame">
-                        <span class="frame__side-text">ELCO SA</span>
+                    <div class="frame position__frame frame--hero">
+                        <span class="frame__text--side">ELCO SA</span>
                         <h1 class="frame__text frame__text--big">
-                            Soluția completă în instalații electrice cu peste 25 de ani de experiență
+                            Soluția completă în instalații electrice cu 30 de ani de experiență
                         </h1>
                     </div>
-                    <div class="frame">
+                    <div class="frame position__frame">
                         <h3 class="frame__text">
                             Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
                         </h3>
                     </div>
-                    <div class="frame">
+                    <div class="frame position__frame">
                         <h3 class="frame__text">
                             Sistemele noastre electrice sunt optimizate pentru a fi ecologice și fiabile, asigurând eficiența energetică, securitatea și confortul clienților noștri
                         </h3>
                     </div>
                 </section>
             </main>
-            <img class="svg pos-help__arrow-down svg--arrow-down" src="./images/arrow.svg" alt="arrow down">
+            <img class="svg svg--arrow-down" src="./images/arrow.svg" alt="arrow down">
         </div>
     </div>
     <div class="bg-img bg-img--secondary">
